--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "server": "node server.js --nouse-idle-notification --max-old-space-size=8192",
+    "start": "node server.js --nouse-idle-notification --max-old-space-size=8192",
+    "serve": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -52,7 +53,6 @@
     "rxjs": "6.5.2",
     "rxjs-compat": "6.5.2",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
     "web-animations-js": "2.3.1",
     "zone.js": "0.9.1"
   },
@@ -62,8 +62,6 @@
     "@angular/compiler-cli": "8.0.0",
     "@angular/language-service": "8.0.0",
     "@types/bootstrap": "4.3.0",
-    "@types/chartist": "0.9.46",
-    "@types/googlemaps": "3.36.4",
     "@types/jasmine": "3.3.13",
     "@types/jquery": "3.3.29",
     "@types/node": "12.0.7",
