--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js --nouse-idle-notification --max-old-space-size=8192",
+    "start": "NODE_ENV=production node server.js --nouse-idle-notification --max-old-space-size=8192",
     "serve": "ng serve",
     "build": "ng build",
     "test": "ng test",
